Correcion del placeholder en historico

--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
   }
 
 .hero1{
-  background-image: url("./../public/hero.jpg");
+  background-image: url("./../public/Hero2.PNG");
   background-repeat: no-repeat;
   background-size: cover;
   
